--- a/css/_globals.scss
+++ b/css/_globals.scss
@@ -111,6 +111,8 @@ $more-icon: url(/assets/svg/more-icon.svg);
 $compose-icon: url(/assets/svg/compose-icon.svg);
 $draft-icon: url(/assets/svg/draft-icon.svg);
 $inbox-icon: url(/assets/svg/inbox-icon.svg);
+$forward-icon: url(/assets/svg/forward-icon.svg);
+$reply-icon: url(/assets/svg/reply-icon.svg);
 
 $icons:
   "star" $star-icon,
@@ -123,7 +125,9 @@ $icons:
   "more" $more-icon,
   "compose" $compose-icon,
   "draft" $draft-icon,
-  "inbox" $inbox-icon;
+  "inbox" $inbox-icon,
+  "forward" $forward-icon,
+  "reply" $reply-icon;
 
 /* ---- Usecase specific styling ---- */
 
