--- a/css/style.scss
+++ b/css/style.scss
@@ -5,6 +5,7 @@
 body {
   display: grid;
   height: 100vh;
+  text-wrap: balance;
 }
 
 /* -----------
@@ -108,7 +109,7 @@ h3 {
   flex-grow: 1;
 }
 
-p, ::placeholder {
+p, textarea::placeholder {
   font-size: 0.875rem;
   flex-grow: 1;
   font-family: var(--body);
@@ -127,7 +128,7 @@ ul {
   overflow: hidden;
 }
 
-time, .label, span {
+time, .label, span, input::placeholder {
   font-size: 0.75rem;
   font-family: var(--body);
   font-weight: 600;
@@ -260,6 +261,10 @@ textarea {
   content: "Inbox";
 }
 
+#current-date {
+  white-space: nowrap;
+}
+
 aside {
   width: 100%;
   visibility: hidden;
@@ -292,7 +297,7 @@ h2, section > :first-child {
     height: 18px;
   }
   #greeting > h1::after {
-    content: "Inbox";
+    content: "Hi Kariyma!";
   }
   #greeting > * {
     margin-left: 1rem;
@@ -300,6 +305,7 @@ h2, section > :first-child {
   #greeting {
     flex-flow: column;
     height: 2rem;
+    gap: 0.25rem;
   }
   #logo {
     margin: 0 0 0.8rem 1rem;
@@ -782,6 +788,22 @@ nav#primary-nav.slide-in {
   box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   display: flex;
   flex-direction: column;
+}
+
+#email__exit-btn {
+  display: flex;
+  padding: 0.5rem;
+  align-items: center;
+  background-color: transparent;
+  max-height: $card-h;
+  height: 100%;
+  border: none;
+  color: rgb(var(--dark-gray), 0.5);
+  cursor: pointer;
+  & :first-child {
+    flex-grow: 1;
+    text-align: left;
+  }
 }
 
 #email__subject {
