--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,23 @@
 @charset "UTF-8";
 @import url("reset.css");
-@import url("https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap");
 :root {
-  --offwhite: #e9ecf2;
+  --offwhite: #f5f5f4;
   --gold: #ffa800;
-  --lightest-gray: rgb(221, 222, 234);
-  --light-gray: #c8c8d8;
+  --lightest-gray: #f5f1ed;
+  --light-gray: #ffcf74;
   --dark-gray: 46, 46, 56;
-  --blue: #0164ee;
-  --interactive: var(--blue);
+  --active: rgb(46, 46, 56);
+  --interactive: var(--active);
   --global-bg: var(--lightest-gray);
-  --border: var(--light-gray);
+  --border: #dddeea;
   --bg-card: var(--offwhite);
+  --badge: #c8c8d8;
   --bg-checkbox: var(--light-gray);
-  --jakarta: "Plus Jakarta Sans", system-ui, -apple-system, sans-serif;
-  --body: "Inter", system-ui, -apple-system, sans-serif;
+  --display: "DM Sans", system-ui, -apple-system, sans-serif;
+  --body: "DM Sans", system-ui, -apple-system, sans-serif;
   --text-color: rgba(var(--dark-gray), 0.8);
+  --hover-bg: #dddeea;
 }
 
 body {
@@ -112,7 +114,7 @@ body {
   GRID
 /----------- */
 /*- min-width: 375px -*/
-@media screen and (min-width: 375px) {
+@media screen and (min-width: 320px) {
   body {
     grid-template: auto 1fr/0 1fr;
   }
@@ -144,6 +146,8 @@ body {
   main {
     grid-row: 2/span 2;
     grid-column: 2/span 2;
+    height: calc(100vh - 68px);
+    overflow-y: scroll;
   }
   nav#primary-nav {
     grid-row: 1/span 3;
@@ -175,7 +179,7 @@ h3 {
 h1 {
   font-size: 1rem;
   white-space: wrap;
-  font-family: var(--jakarta);
+  font-family: var(--display);
 }
 
 h2 {
@@ -230,7 +234,7 @@ input::-moz-placeholder {
   line-height: 1.5;
 }
 
-time, .label, span, input::placeholder {
+time.email__datetime, .label, span#unread-count, input::placeholder {
   font-size: 0.75rem;
   font-family: var(--body);
   font-weight: 600;
@@ -242,7 +246,7 @@ span {
 }
 
 .email__unread {
-  font-weight: 700;
+  font-weight: 700 !important;
   color: rgb(var(--dark-gray));
 }
 
@@ -260,6 +264,10 @@ span {
   font-weight: 600;
 }
 
+.home__list .email__details p > span {
+  font-weight: 500;
+}
+
 .email__details p, .email__details p > span {
   display: inline-block;
   overflow-x: hidden;
@@ -269,6 +277,10 @@ span {
   max-width: 900px;
   line-height: 1.2;
   border-radius: 0;
+}
+
+.email__details p > span {
+  transform: translateY(4px);
 }
 
 @media screen and (min-width: 768px) {
@@ -394,9 +406,6 @@ h2, section > :first-child {
 }
 
 @media screen and (min-width: 768px) {
-  header#main-header, main {
-    background-color: var(--offwhite);
-  }
   nav#primary-nav {
     border-right: 1px solid var(--border);
   }
@@ -411,7 +420,7 @@ h2, section > :first-child {
     height: 18px;
   }
   #greeting > h1::after {
-    content: "Hi Kariyma!";
+    content: "Welcome Kariyma!";
   }
   #greeting > * {
     margin-left: 1rem;
@@ -421,15 +430,10 @@ h2, section > :first-child {
     height: 2rem;
     gap: 0.25rem;
   }
-  #logo {
-    margin: 0 0 0.8rem 1rem;
-    height: 68px;
-  }
 }
 /*-- Add .list-resize transition to <main> onClick --*/
 header#main-header, main {
   transition: grid-column 0.5s;
-  transition-behavior: allow-discrete;
 }
 
 .list-resize {
@@ -471,12 +475,14 @@ form.search-bar input[type=text]::placeholder {
 form.search-bar button {
   border-color: transparent;
   background: transparent;
+  margin-right: 0.5rem;
 }
 
 @media screen and (min-width: 768px) {
   form.search-bar {
     display: flex;
     margin: 0 0.5rem 0 0.5rem;
+    transform: translateX(-1rem);
     flex-flow: row nowrap;
     align-items: center;
     max-width: 300px;
@@ -484,10 +490,10 @@ form.search-bar button {
     flex-grow: 1;
   }
   form.search-bar:hover {
-    background-color: var(--lightest-gray);
+    background-color: var(--hover-bg);
   }
   form.search-bar:focus, form.search-bar :focus-visible, form.search-bar :focus-within {
-    background-color: var(--light-gray);
+    background-color: var(--hover-bg);
   }
   form.search-bar input[type=text] {
     width: 100%;
@@ -499,16 +505,16 @@ form.search-bar button {
 .email {
   flex-grow: 1;
   position: relative;
-  padding: 0 0.5rem;
+  padding: 0 1rem;
   max-height: -moz-fit-content;
   max-height: fit-content;
 }
 .email:hover > .card {
   transition: background-color 300ms ease-out;
-  background-color: var(--lightest-gray);
+  background-color: var(--hover-bg);
 }
 .email > .card.active {
-  background-color: var(--lightest-gray);
+  background-color: var(--hover-bg);
 }
 
 /* EMAIL | List ------
@@ -586,7 +592,7 @@ form.search-bar button {
   z-index: 2;
 }
 .email__actions input[type=checkbox].email__checkbox:checked + span::before {
-  background: center/80% no-repeat url(/assets/svg/checkmark-outline.svg) #0164ee;
+  background: center/80% no-repeat url(/assets/svg/checkmark-outline.svg) var(--active);
 }
 .email__actions input[type=checkbox].email__checkbox + span {
   border: 1px solid var(--border);
@@ -598,14 +604,32 @@ form.search-bar button {
   opacity: 0;
 }
 
+.email__initials {
+  overflow: hidden;
+  width: 28px;
+  height: 28px;
+}
+
+.email__initials > img {
+  height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: top;
+     object-position: top;
+}
+
 .email__actions .email__initials {
   position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* EMAIL | Priority ------
 */
 .email__priority input[type=checkbox].star__checkbox:checked + span {
-  background: var(--blue);
+  background: var(--active);
 }
 .email__priority input[type=checkbox].star__checkbox + span {
   background: rgb(var(--dark-gray));
@@ -633,8 +657,8 @@ time.email__datetime::before {
 }
 
 .home__pinned time.email__datetime {
-  background-color: var(--lightest-gray);
-  border: 1px solid var(--lightest-gray);
+  background-color: var(--badge);
+  border: 1px solid var(--badge);
 }
 
 .home__list time.email__datetime {
@@ -720,11 +744,22 @@ time.email__datetime::before {
   height: 2rem;
 }
 
+#logo {
+  display: flex;
+  width: 300px;
+  height: 100%;
+  position: relative;
+}
+
 .compose__link {
   display: flex;
   height: 100%;
-  width: 100%;
   align-items: center;
+  position: absolute;
+  z-index: 2;
+  flex-grow: 1;
+  width: 100%;
+  justify-content: center;
 }
 
 nav#primary-nav {
@@ -740,7 +775,7 @@ nav#primary-nav ul.nav__links {
   flex-flow: column nowrap;
   border: none;
   padding: 0;
-  margin: 1rem 0;
+  margin: 1rem 0 0 0;
   gap: 0.5rem;
 }
 
@@ -770,6 +805,8 @@ nav#primary-nav .nav__link > a {
   margin: auto auto auto 1rem;
   gap: 0.5rem;
   padding: 0;
+  max-width: 200px;
+  align-items: center;
 }
 
 nav#primary-nav .nav__container {
@@ -783,6 +820,18 @@ nav#primary-nav .nav__container {
 }
 
 @media screen and (min-width: 768px) {
+  #logo {
+    width: auto;
+    margin: 0 1rem 0 1rem;
+    height: 68px;
+  }
+  .compose__link {
+    position: relative;
+    width: 100%;
+  }
+  .compose-btn {
+    margin: 0 1rem;
+  }
   nav#primary-nav {
     height: auto;
     position: relative;
@@ -802,6 +851,9 @@ nav#primary-nav .nav__container {
     height: auto;
     flex-grow: 1;
     border: none;
+    padding: 0.5rem;
+    width: -moz-fit-content;
+    width: fit-content;
   }
   nav#primary-nav .nav__link > a {
     margin: auto auto auto 0;
@@ -879,7 +931,7 @@ nav#primary-nav.slide-in {
   width: 100%;
   height: 100%;
   border: 1px solid var(--border);
-  background-color: var(--offwhite);
+  background-color: #ffffff;
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -2px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
@@ -965,6 +1017,11 @@ nav#primary-nav.slide-in {
   justify-content: start;
 }
 
+#sender__info {
+  font-size: 0.875rem;
+  gap: 0.25rem;
+}
+
 @media screen and (min-width: 768px) {
   #sender__actions > #sender__actions--more {
     border: none;
@@ -987,7 +1044,7 @@ nav#primary-nav.slide-in {
 }
 .actions {
   display: grid;
-  grid-template: 1fr/repeat(4, 68px);
+  grid-template: 1fr/repeat(4, 48px);
   gap: 1px;
 }
 .actions > * {
@@ -1196,10 +1253,11 @@ button.icon-btn {
   transition: background-color 300ms ease-out;
 }
 button.icon-btn:hover {
-  background-color: var(--light-gray);
+  background-color: var(--hover-bg);
 }
 
 button.primary-btn {
+  font-family: var(--body);
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
@@ -1210,14 +1268,19 @@ button.primary-btn {
   cursor: pointer;
   margin: auto 0;
   justify-content: center;
+  font-weight: 600;
   max-width: 200px;
   min-height: 28px;
   height: 100%;
-  background-color: var(--offwhite);
+  color: var(--offwhite);
+  background-color: #1d2939;
   border: 1px solid var(--border);
-  border-radius: 1rem;
+  border-radius: 0.5rem;
   transition: background-color 300ms ease-out;
 }
 button.primary-btn:hover {
-  background-color: var(--light-gray);
+  background-color: #000;
+}
+button.primary-btn span {
+  background-color: var(--offwhite);
 }/*# sourceMappingURL=style.css.map */
