--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 @import url("reset.css");
-@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 :root {
   --offwhite: #f5f5f4;
   --gold: #ffa800;
@@ -14,8 +14,8 @@
   --bg-card: var(--offwhite);
   --badge: #c8c8d8;
   --bg-checkbox: var(--light-gray);
-  --display: "DM Sans", system-ui, -apple-system, sans-serif;
-  --body: "DM Sans", system-ui, -apple-system, sans-serif;
+  --display: "Bricolage Grotesque", system-ui, -apple-system, sans-serif;
+  --body: "Inter", system-ui, -apple-system, sans-serif;
   --text-color: rgba(var(--dark-gray), 0.8);
   --hover-bg: #dddeea;
 }
@@ -23,17 +23,31 @@
 body {
   background-color: var(--offwhite);
   color: var(--text-color);
+  font-family: var(--body);
   font-optical-sizing: auto;
+  font-style: normal;
+}
+
+.display-font {
+  font-family: var(--display);
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-variation-settings: "wdth" 100;
+  font-weight: 300;
+  font-size: 1.5rem;
+  color: rgba(var(--dark-gray));
 }
 
 main[data-theme=long] .email__details {
   --compact-grid: 1fr / 0 25% minmax(auto, 948px) min-content;
   --compact-flow: row;
+  --theme-h3: 0.875rem;
 }
 
 main[data-theme=compact] .email__details {
   --compact-grid: 0 1fr 1fr / 1fr min-content;
   --compact-flow: column;
+  --theme-h3: 0.75rem;
 }
 
 /* ---- Breakpoints ---- */
@@ -146,8 +160,6 @@ body {
   main {
     grid-row: 2/span 2;
     grid-column: 2/span 2;
-    height: calc(100vh - 68px);
-    overflow-y: scroll;
   }
   nav#primary-nav {
     grid-row: 1/span 3;
@@ -179,7 +191,7 @@ h3 {
 h1 {
   font-size: 1rem;
   white-space: wrap;
-  font-family: var(--display);
+  color: rgb(var(--dark-gray));
 }
 
 h2 {
@@ -260,12 +272,13 @@ span {
   text-overflow: ellipsis;
   white-space: nowrap;
   line-height: 1.2;
-  font-size: 0.75rem;
+  font-size: var(--theme-h3);
   font-weight: 600;
 }
 
 .home__list .email__details p > span {
   font-weight: 500;
+  color: rgb(var(--dark-gray));
 }
 
 .email__details p, .email__details p > span {
@@ -291,9 +304,6 @@ span {
   p {
     font-size: 1rem;
     flex-grow: 1;
-  }
-  .email__details h3 {
-    font-size: 0.875rem;
   }
 }
 /* -----------
@@ -338,6 +348,7 @@ nav#primary-nav {
 header#main-header {
   display: flex;
   height: 68px;
+  border-bottom: none;
 }
 header#main-header > * ~ * {
   border-radius: 0.5rem;
@@ -406,8 +417,19 @@ h2, section > :first-child {
 }
 
 @media screen and (min-width: 768px) {
+  main {
+    height: calc(100vh - 100px);
+    overflow-y: scroll;
+  }
+  header#main-header {
+    gap: 1rem;
+    padding-bottom: 2rem;
+    border-bottom: 1px solid var(--border);
+  }
   nav#primary-nav {
     border-right: 1px solid var(--border);
+    z-index: 1;
+    width: 232px;
   }
   h2, section > :first-child {
     margin: 1rem 0 0.5rem 1rem;
@@ -429,6 +451,10 @@ h2, section > :first-child {
     flex-flow: column;
     height: 2rem;
     gap: 0.25rem;
+  }
+  aside {
+    z-index: 1;
+    width: 100%;
   }
 }
 /*-- Add .list-resize transition to <main> onClick --*/
@@ -606,8 +632,9 @@ form.search-bar button {
 
 .email__initials {
   overflow: hidden;
-  width: 28px;
-  height: 28px;
+  width: 30px;
+  height: 30px;
+  border-radius: 0.5rem;
 }
 
 .email__initials > img {
@@ -721,22 +748,6 @@ time.email__datetime::before {
   grid-auto-flow: var(--compact-flow);
 }
 
-/* -----------
-  MISC
-/----------- */
-@media screen and (min-width: 768px) {
-  aside {
-    z-index: 1;
-    width: 100%;
-  }
-  nav#primary-nav {
-    z-index: 1;
-    width: 232px;
-  }
-  header#main-header {
-    gap: 1rem;
-  }
-}
 /* -----------
   NAVIGATION
 /----------- */
@@ -942,8 +953,6 @@ nav#primary-nav.slide-in {
   padding: 0.5rem;
   align-items: center;
   background-color: transparent;
-  max-height: 68px;
-  height: 100%;
   border: none;
   color: rgb(var(--dark-gray), 0.5);
   cursor: pointer;
@@ -956,20 +965,22 @@ nav#primary-nav.slide-in {
 #email__subject {
   height: -moz-fit-content;
   height: fit-content;
-}
-#email__subject h1 {
-  font-size: 1.5rem;
-  color: rgb(var(--dark-gray));
+  padding: 0.5rem;
 }
 
 #email__sender {
   display: grid;
   grid-template: auto 1fr/32px auto;
   grid-auto-flow: row;
-  align-items: center;
+  gap: 0.5rem;
+  margin-top: 0.25rem;
+  padding: 0.5rem;
 }
 #email__sender #sender__actions {
   grid-column: 2/span 1;
+}
+#email__sender span:nth-child(2) {
+  color: rgb(var(--dark-gray), 0.5);
 }
 
 #sender__actions {
@@ -983,12 +994,25 @@ nav#primary-nav.slide-in {
   justify-content: center;
 }
 
-#email__sender, #email__subject {
-  padding: 0.5rem;
-  border-bottom: 1px solid var(--border);
-}
-
 @media screen and (min-width: 768px) {
+  #email__exit-btn {
+    padding: 1rem;
+    max-height: 68px;
+    height: 100%;
+  }
+  #email__subject h1 {
+    font-size: 1.5rem;
+    color: rgb(var(--dark-gray));
+  }
+  #email__sender {
+    padding: 1rem;
+  }
+  #email__subject {
+    padding: 0 1rem 1rem 1rem;
+  }
+  #email__sender, #email__subject {
+    border-bottom: 1px solid var(--border);
+  }
   .email__content {
     border-left: 1px solid var(--border);
     width: 43.75vw;
