--- a/css/style.scss
+++ b/css/style.scss
@@ -48,8 +48,8 @@ body {
   main {
     grid-row: 2 / span 2;
     grid-column: 2 / span 2;
-    height: calc(100vh - 68px);
-    overflow-y: scroll;
+    // height: calc(100vh - 100px);
+    // overflow-y: scroll;
   }
   nav#primary-nav {
     grid-row: 1 / span 3;
@@ -87,7 +87,7 @@ h3 {
 h1 {
   font-size: 1rem;
   white-space: wrap;
-  font-family: var(--display);
+  color: rgb(var(--dark-gray));
 }
 
 h2 {
@@ -152,12 +152,13 @@ span {
 
 .email__details h3 {
   @include text-truncate;
-  font-size: 0.75rem;
+  font-size: var(--theme-h3);
   font-weight: 600;
 }
 
 .home__list .email__details p > span {
   font-weight: 500;
+  color: rgb(var(--dark-gray));
 }
 
 .email__details p, .email__details p > span {
@@ -174,15 +175,11 @@ span {
 @include responsize("tablet") {
   h1, h2 {
     font-weight: 700;
-    // width: 100%;
     align-items: center;
   }
   p {
     font-size: 1rem;
     flex-grow: 1;
-  }
-  .email__details h3 {
-    font-size: 0.875rem;
   }
 }
 
@@ -219,6 +216,7 @@ nav#primary-nav {
 header#main-header {
   display: flex;
   height: $card-h;
+  border-bottom: none;
   & > * ~ * {
     border-radius: 0.5rem;
     margin: auto 0;
@@ -286,11 +284,19 @@ h2, section > :first-child {
 }
 
 @include responsize("tablet"){
-  // header#main-header, main{
-  //   background-color: var(--offwhite);
-  // }
+  main {
+    height: calc(100vh - 100px);
+    overflow-y: scroll;
+  }
+  header#main-header {
+    gap: 1rem;
+    padding-bottom: 2rem;
+    border-bottom: 1px solid var(--border);
+  }
   nav#primary-nav {
     border-right: 1px solid var(--border);
+    z-index: 1;
+    width: 232px;
   }
   h2, section > :first-child {
     margin: 1rem 0 0.5rem 1rem;
@@ -313,7 +319,12 @@ h2, section > :first-child {
     height: 2rem;
     gap: 0.25rem;
   }
+  aside {
+    z-index: 1;
+    width: 100%;
+  }
 }
+
 
 
 /*-- Add .list-resize transition to <main> onClick --*/ 
@@ -378,6 +389,7 @@ form.search-bar button {
     width: 100%;
   }
 }
+
 
 /* -----------
   EMAIL
@@ -492,8 +504,9 @@ form.search-bar button {
 
 .email__initials {
   overflow: hidden;
-  width: 28px;
-  height: 28px;
+  width: 30px;
+  height: 30px;
+  border-radius: 0.5rem;
 }
 
 .email__initials > img {
@@ -585,10 +598,6 @@ time.email__datetime::before {
     color: transparent;
     cursor: pointer;
   }
-  // & :last-child {
-  //   grid-column: 2 / span 1;
-  //   grid-row: 1 / span 2;
-  // }
 }
 
 .email__details a::after, .email__details form::after {
@@ -615,23 +624,6 @@ time.email__datetime::before {
   grid-auto-flow: var(--compact-flow);
 }
 
-/* -----------
-  MISC
-/----------- */ 
-
-@media screen and (min-width: 768px) {
-  aside {
-    z-index: 1;
-    width: 100%;
-  }
-  nav#primary-nav {
-    z-index: 1;
-    width: 232px;
-  }
-  header#main-header {
-    gap: 1rem;
-  }
-}
 
 /* -----------
   NAVIGATION
@@ -832,8 +824,6 @@ nav#primary-nav.slide-in {
   padding: 0.5rem;
   align-items: center;
   background-color: transparent;
-  max-height: $card-h;
-  height: 100%;
   border: none;
   color: rgb(var(--dark-gray), 0.5);
   cursor: pointer;
@@ -845,19 +835,21 @@ nav#primary-nav.slide-in {
 
 #email__subject {
   height: fit-content;
-  & h1 {
-    font-size: 1.5rem;
-    color: rgb(var(--dark-gray));
-  }
+  padding: 0.5rem;
 }
 
 #email__sender {
   display: grid;
   grid-template: auto 1fr / 32px auto;
   grid-auto-flow: row;
-  align-items: center;
+  gap: 0.5rem;
+  margin-top: 0.25rem;
+  padding: 0.5rem;
   & #sender__actions {
     grid-column: 2 / span 1;
+  }
+  & span:nth-child(2) {
+    color: rgb(var(--dark-gray), 0.5);
   }
 }
 
@@ -872,12 +864,25 @@ nav#primary-nav.slide-in {
   justify-content: center;
 }
 
-#email__sender, #email__subject {
-  padding: 0.5rem;
-  border-bottom: 1px solid var(--border);
-}
-
-@media screen and (min-width: 768px) {
+@include responsize("tablet") {
+  #email__exit-btn {
+    padding: 1rem;
+    max-height: $card-h;
+    height: 100%;
+  }
+  #email__subject h1 {
+    font-size: 1.5rem;
+    color: rgb(var(--dark-gray));
+  }
+  #email__sender {
+    padding: 1rem;
+  }
+  #email__subject {
+    padding: 0 1rem 1rem 1rem;
+  }
+  #email__sender, #email__subject {
+    border-bottom: 1px solid var(--border);
+  }
   .email__content {
     border-left: 1px solid var(--border);
     width: calc(100vw * 56 / 128.0);
