--- a/src/_includes/email.html
+++ b/src/_includes/email.html
@@ -1,34 +1,36 @@
+{% assign count = 0 %}
 {% for email in emails %}
-<li class="email" id="email2">
+  {% assign count = count | plus: 1 %}
+<li class="email" id="email-{{ count }}">
     <div class="card">
-      <div class="email__actions" aria-describedby="author2">
+      <div class="email__actions" aria-describedby="author-{{ count }}">
         <span class="email__initials" aria-hidden="true">
-          {% if email.profileImg == "" %}
           {% for name in email.sender %}
+          {% if email.profileImg == "" %}
             {{ name.initials }}</h3>
-          {% endfor %}
-          {% else %}
+            {% else %}
             <img
-            alt="Peter Potamus profile picture"
+            alt="{{ name.fullname }} profile picture"
             src={{ email.profileImg }}
-          /> 
-        {% endif %}
+            /> 
+          {% endif %}
+        {% endfor %}
            </span>
         <input
-          id="select_email2"
+          id="select_email-{{ count }}"
           type="checkbox"
           class="email__checkbox"
-          name="select_email2"
+          name="select_email-{{ count }}"
         />
         <span class="checkmark" aria-hidden="true"></span>
-        <label for="select_email2"> From </label>
+        <label for="select_email-{{ count }}"> From </label>
       </div>
       <div class="email__details">
-        <a href="#" id="author3">
+        <a href="#">
           <span class="visually-hidden">Link</span>
         </a>
         {% for name in email.sender %}
-        <h3>{{ name.fullname }}</h3>
+        <h3 id="author-{{ count }}">{{ name.fullname }}</h3>
         {% endfor %}
         <p>
           <span>{{ email.subject }}</span> - {{ email.body }}
@@ -36,19 +38,28 @@
         <div class="email__priority">
           <div>
             <time class="email__datetime" datetime="2024-11-18 19:00">
-              {{ email.timestamp }}</time
-            >
-          </div>
-          <div class="email__star-container">
-            <input
-              id="star-email2"
-              type="checkbox"
-              class="star__checkbox"
-              name="star-email2"
-            />
-            <span class="star-icon"></span>
-            <label for="star-email2"> star this email </label>
-          </div>
+              {{ email.timestamp }}
+            </time>
+            {% if email.pinned %}
+              <img
+                src="/assets/svg/pin-illustrative.svg"
+                alt="Pin icon"
+                class="pinned-icon visible"
+              />
+            </div>
+            {% else %}
+            </div>
+              <div class="email__star-container">
+                <input
+                id="star-email-{{ count }}"
+                type="checkbox"
+                class="star__checkbox"
+                name="star-email-{{ count }}"
+                />
+                <span class="star-icon"></span>
+                <label for="star-email-{{ count }}"> star this email </label>
+                </div>
+          {% endif %}
         </div>
       </div>
     </div>
