Fixed star checkbox input

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -656,7 +656,7 @@ form.search-bar button {
 /* EMAIL | Priority ------
 */
 .email__priority input[type=checkbox].star__checkbox:checked + span {
-  background: var(--active);
+  background: var(--gold);
 }
 .email__priority input[type=checkbox].star__checkbox + span {
   background: rgb(var(--dark-gray));
